# szip

./: CMakeLists.txt  CTestConfig.cmake
config/cmake/: CTestCustom.cmake  ConfigureChecks.cmake  SZIPMacros.cmake  SZIPTests.c  cacheinit.cmake  szip-config-version.cmake.in  szip-config.cmake.in
src/: CMakeLists.txt
test/: CMakeLists.txt
